syntax = "proto2";
package groupcachepb;

message GetRequest {
        required string group = 1;
        required string key = 2;//不确定可以 required/guarnteed UTF-8
    }

message GetResponse {
        optional bytes value = 1;
        optional double minute_qps = 2;
    }

service GroupCache {
        rpc Get(GetRequest) returns (GetResponse) {
            };
    }
