syntax = "proto2";

package testpb;

message TestMessage {
        optional string name = 1;
        optional string city = 2;
    }

message TestRequest {
    required string lower = 1;  //
    optional int32 repeat_count = 2 [default = 1]; //多少次
}

message TestResponse {
    optional string value = 1;
}

message CacheStats {
    optional int64 items = 1;
    optional int64 bytes = 2;
    optional int64 gets = 3;
    optional int64 hits = 4;
    optional int64 evicts = 5;
}

message StatsResponse {
    optional int64 gets = 1;
    optional int64 cache_hits = 12;
    optional int64 fills = 2;
    optional uint64 total_alloc = 3;
    optional CacheStats main_cache = 4; 
    optional CacheStats hot_cache = 5;
    optional int64 server_in = 6;
    optional int64 loads = 8;
    optional int64 peer_loads = 9;
    optional int64 peer_errors = 10;
    optional int64 local_loads = 11; 
}

message Empty {}

service GroupCacheTest {
    rpc InitPeers(Empty) returns (Empty) {};
    rpc Get(TestRequest) returns (TestResponse) {};
    rpc GetSTats(Empty) returns (StatsResponse) {};
}
